API schema validation

--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,6 +1,9 @@
 # api
 flask==1.1.2
 
+# schema validation
+marshmallow
+
 # local classification_model package
 # update with your local path
 -e "/Users/azzouz/Documents/Deployment_Demo/packages/classification_model"
