--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - aws-s3/copy:
           arguments: '--dryrun'
           from: 's3://deployment-demo-bnc/training-dataset'
-          to: packages/classification_model/regression_model/datasets/
+          to: packages/classification_model/regression_model/datasets/german_columns.csv
 
       - run:
           name: Runnning tests
