--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,11 +22,11 @@ jobs:
       - aws-s3/copy:
           arguments: '--dryrun'
           from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
-          to: packages/classification_model/regression_model/datasets/
+          to: 'packages/classification_model/regression_model/datasets/'
 
       - run:
           name: Runnning tests
-          command: 
+          command:
             py.test -vv packages/classification_model/tests
 
 workflows:
@@ -34,4 +34,3 @@ workflows:
   test-all:
     jobs:
       - test_classification_model
-
