--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,37 +1,22 @@
 version: 2.1
 
 orbs:
-  aws-s3: circleci/aws-s3@2.0.0
+  python: circleci/python@0.2.1
 
 jobs:
-  test_classification_model:
-    working_directory: ~/project
-    docker:
-      - image: circleci/python:3.8.3
+  build-and-test:
+    executor: python/default
     steps:
       - checkout
-
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
       - run:
-          name: Env
-          command: |
-            virtualenv venv
-            . venv/bin/activate
-            pip install --upgrade pip
-            pip install -r packages/classification_model/requirements.txt
-
-      - aws-s3/copy:
-          arguments: '--dryrun'
-          from: 'deployment-demo-bnc/training-dataset/german_columns.csv'
-          to: 'packages/classification_model/regression_model/datasets/'
-
-      - run:
-          name: Runnning tests
-          command:
-            py.test -vv packages/classification_model/tests
+          command: ./manage.py test
+          name: Test
 
 workflows:
-  version: 2.1
-  test-all:
+  main:
     jobs:
-      - test_classification_model
+      - build-and-test
 
