--- a/.cercle.ci/config.yml
+++ b/.cercle.ci/config.yml
@@ -18,15 +18,16 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             pip install -r packages/classification_model/requirements.txt
+            py.test -vv packages/classification_model/tests
 
       - aws-s3/copy:
           arguments: '--dryrun'
-          from: 'deployment-demo-bnc/training-dataset/german_columns.csv'
-          to: 'packages/classification_model/regression_model/datasets/'
+          from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
+          to: packages/classification_model/classification_model/datasets/
 
       - run:
           name: Runnning tests
-          command:
+          command: |
             py.test -vv packages/classification_model/tests
 
 workflows:
