--- a/.cercle.ci/config.yml
+++ b/.cercle.ci/config.yml
@@ -10,15 +10,13 @@ jobs:
       - image: circleci/python:3.8.3
     steps:
       - checkout
-
       - run:
-          name: Env
+          name: Setup test env
           command: |
             virtualenv venv
             . venv/bin/activate
             pip install --upgrade pip
             pip install -r packages/classification_model/requirements.txt
-            py.test -vv packages/classification_model/tests
 
       - aws-s3/copy:
           arguments: '--dryrun'
@@ -30,8 +28,69 @@ jobs:
           command: |
             py.test -vv packages/classification_model/tests
 
+
+  test_ml_api:
+    working_directory: ~/project
+    docker:
+      - image: circleci/python:3.8.3
+    steps:
+      - checkout
+      - run:
+          name: Setup test env
+          command: |
+            virtualenv venv
+            . venv/bin/activate
+            pip install --upgrade pip
+            pip install -r packages/ml_api/requirements.txt
+
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
+          to: packages/classification_model/classification_model/datasets/
+
+      - run:
+          name: Runnning tests
+          command: |
+            py.test -vv packages/ml_api/tests
+
+
+  train_and_upload_classification_model:
+    working_directory: ~/project
+    docker:
+      - image: circleci/python:3.8.3
+    steps:
+      - checkout
+      - run:
+          name: Setup env
+          command: |
+            virtualenv venv
+            . venv/bin/activate
+            pip install -r packages/classification_model/requirements.txt
+
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
+          to: packages/classification_model/classification_model/datasets/
+
+      - run:
+          name: Publish model
+          command: |
+            . venv/bin/activate
+            PYTHONPATH=./packages/regression_model python3 packages/classification_model/classification_model/train_pipeline.py
+            python3 packages/classification_model/setup.py sdist bdist_wheel
+
+      - aws-s3/copy:
+          arguments: '--dryrun'
+          from: packages/classification_model/dist/
+          to: 's3://deployment-demo-bnc/classification-model-package/'
+
 workflows:
-  version: 2.1
+  version: 2
   test-all:
     jobs:
-      - test_classification_model
+      - test_regression_model
+      - test_ml_api
+      - train_and_upload_regression_model
+      - test_ml_api:
+          requires:
+            - train_and_upload_regression_model
