--- a/.cercle.ci/config.yml
+++ b/.cercle.ci/config.yml
@@ -82,7 +82,7 @@ jobs:
       - aws-s3/copy:
           arguments: '--dryrun'
           from: packages/classification_model/dist/
-          to: 's3://deployment-demo-bnc/classification-model-package/
+          to: 's3://deployment-demo-bnc/classification-model-package/'
 
 workflows:
   version: 2.1
