--- a/.cercle.ci/config.yml
+++ b/.cercle.ci/config.yml
@@ -85,7 +85,7 @@ workflows:
       - test_classification_model
       - test_ml_api
       - train_and_upload_classification_model
-      - test_ml_api
+      - test_ml_api:
           requires:
             - train_and_upload_classification_model
 
