--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,7 +47,9 @@ jobs:
             cd packages/classification_model/dist
             INDEX_VERSION = $(find . -type f -name "*.whl")
             pip install -r packages/ml_api/requirements.txt
-            pip install --extra-index-url= ${PIP_EXTRA_INDEX_URL} / ${INDEX_VERSION}
+            ${INDEX_VERSION} = (find . -type f -name "*.whl" | cut -c3-)
+            echo "${PIP_EXTRA_INDEX_URL}${INDEX_VERSION}"
+            pip install --extra-index-url = ${PIP_EXTRA_INDEX_URL} / ${INDEX_VERSION}
             py.test -vv packages/ml_api/tests
 
 
