--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,11 +45,10 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             cd packages/classification_model/dist
-            INDEX_VERSION = $(find . -type f -name "*.whl")
             pip install -r packages/ml_api/requirements.txt
-            ${INDEX_VERSION} = (find . -type f -name "*.whl" | cut -c3-)
-            echo "${PIP_EXTRA_INDEX_URL}${INDEX_VERSION}"
-            pip install --extra-index-url = ${PIP_EXTRA_INDEX_URL} / ${INDEX_VERSION}
+            INDEX_VERSION=$(find . -type f -name "*.whl" | cut -c3-)
+            echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
+            pip install --extra-index-url = echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
             py.test -vv packages/ml_api/tests
 
 
