--- a/.cercle.ci/config.yml
+++ b/.cercle.ci/config.yml
@@ -45,11 +45,11 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             pip install -r packages/ml_api/requirements.txt
-#            cd packages/classification_model/dist
-#            INDEX_VERSION=$(find . -type f -name "*.whl" | cut -c3-)
-#            echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
-#            pip install --extra-index-url = echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
-#            py.test -vv packages/ml_api/tests
+            cd packages/classification_model/dist
+            INDEX_VERSION=$(find . -type f -name "*.whl" | cut -c3-)
+            echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
+            pip install --extra-index-url = echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
+            py.test -vv packages/ml_api/tests
 
 
   train_and_upload_classification_model:
