--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
 
       - run:
           name: Show me the result
-          command: echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
+          command: echo /$INDEX_VERSION
 
 #            pip install --extra-index-url = echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
 #            py.test -vv packages/ml_api/tests
