--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,10 +47,7 @@ jobs:
             pip install -r packages/ml_api/requirements.txt
             cd packages/classification_model/dist
             INDEX_VERSION=$(find . -type f -name "*.whl" | cut -c3-)
-
-      - run:
-          name: Show me the result
-          command: echo /$INDEX_VERSION
+            echo $INDEX_VERSION
 
 #            pip install --extra-index-url = echo $PIP_EXTRA_INDEX_URL/$INDEX_VERSION
 #            py.test -vv packages/ml_api/tests
