--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,8 +48,8 @@ jobs:
             INDEX_VERSION=$(find . -type f -name "*.whl" | cut -c3-)
             cd ~/project
             pip install -r packages/ml_api/requirements.txt
-            pip install --extra-index-url=$PIP_EXTRA_INDEX_URL$INDEX_VERSION
-            py.test -vv packages/ml_api/tests
+#            pip install --extra-index-url=$PIP_EXTRA_INDEX_URL$INDEX_VERSION
+#            py.test -vv packages/ml_api/tests
 
 
   train_and_upload_classification_model:
