--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -107,6 +107,8 @@ workflows:
   version: 2.1
   test-all:
     jobs:
+      - test_regression_model
+      - test_ml_api
       - train_and_upload_classification_model:
           requires:
             - test_classification_model
