--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,33 +22,116 @@ fetch_data: &fetch_data
     from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
     to: packages/classification_model/classification_model/datasets/
 
-jobs:
-  test_classification_model:
-    <<: *defaults
-    steps:
-      - checkout
-      - aws-s3/copy:
-          arguments: '--dryrun'
-          from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
-          to: packages/classification_model/classification_model/datasets/
-      - *prepare_venv
-      - run:
-          name: Install requirements
-          command: |
-            . venv/bin/activate
-            pip install --upgrade pip
-            pip install -r packages/classification_model/requirements.txt
-      - *fetch_data
-      - run:
-          name: Train model
-          command: |
-            . venv/bin/activate
-            PYTHONPATH=./packages/classification_model python3 packages/classification_model/classification_model/train_pipeline.py
-      - run:
-          name: Run tests
-          command: |
-            . venv/bin/activate
-            py.test -vv packages/classification_model/tests
+#jobs:
+#  test_classification_model:
+#    <<: *defaults
+#    steps:
+#      - checkout
+#      - aws-s3/copy:
+#          arguments: '--dryrun'
+#          from: 's3://deployment-demo-bnc/training-dataset/german_columns.csv'
+#          to: packages/classification_model/classification_model/datasets/
+#      - *prepare_venv
+#      - run:
+#          name: Install requirements
+#          command: |
+#            . venv/bin/activate
+#            pip install --upgrade pip
+#            pip install -r packages/classification_model/requirements.txt
+#      - *fetch_data
+#      - run:
+#          name: Train model
+#          command: |
+#            . venv/bin/activate
+#            PYTHONPATH=./packages/classification_model python3 packages/classification_model/classification_model/train_pipeline.py
+#      - run:
+#          name: Run tests
+#          command: |
+#            . venv/bin/activate
+#            py.test -vv packages/classification_model/tests
+
+#  test_ml_api:
+#    <<: *defaults
+#    steps:
+#      - checkout
+#      - restore_cache:
+#          keys:
+#            - py-deps-{{ checksum "packages/ml_api/requirements.txt" }}
+#      - aws-s3/copy:
+#          arguments: '--recursive'
+#          from: 's3://deployment-demo-bnc/classification-model-package/'
+#          to: packages/classification_model/dist/
+#      - run:
+#          name: Runnning tests
+#          command: |
+#            virtualenv venv
+#            . venv/bin/activate
+#            pip install --upgrade pip
+#            pip install -r packages/ml_api/requirements.txt
+#            pip install -e packages/classification_model
+#            py.test -vv packages/ml_api/tests -m "not differential"
+#      - save_cache:
+#          key: py-deps-{{ checksum "packages/ml_api/requirements.txt" }}
+#          paths:
+#            - "/venv"
+
+#  train_and_upload_classification_model:
+#    <<: *defaults
+#    steps:
+#      - checkout
+#      - *prepare_venv
+#      - run:
+#          name: Install requirements
+#          command: |
+#            virtualenv venv
+#            . venv/bin/activate
+#            pip install -r packages/classification_model/requirements.txt
+#      - *fetch_data
+#      - run:
+#          name: Train model
+#          command: |
+#            . venv/bin/activate
+#            PYTHONPATH=./packages/classification_model python3 packages/classification_model/classification_model/train_pipeline.py
+#      - run:
+#          name: Publish the model to s3
+#          command: |
+#            . venv/bin/activate
+#            cd packages/classification_model
+#            python3 setup.py sdist bdist_wheel
+#      - aws-s3/copy:
+#          arguments: '--recursive'
+#          from: packages/classification_model/dist/
+#          to: 's3://deployment-demo-bnc/classification-model-package/'
+
+#  differential_tests:
+#    <<: *defaults
+#    steps:
+#      - checkout
+#      - *prepare_venv
+#      - run:
+#          name: Capturing previous model predictions
+#          command: |
+#            . venv/bin/activate
+#            pip install -r packages/ml_api/diff_test_requirements.txt
+#            PYTHONPATH=./packages/ml_api python3 packages/ml_api/tests/capture_model_predictions.py
+#      - run:
+#          name: Runnning differential tests
+#          command: |
+#            . venv/bin/activate
+#            pip install -r packages/ml_api/requirements.txt
+#            py.test -vv packages/ml_api/tests -m differential
+
+#workflows:
+#  version: 2.1
+#  test-all:
+#    jobs:
+#      - test_classification_model
+#      - test_ml_api
+#      - train_and_upload_classification_model:
+#          requires:
+#            - test_classification_model
+#            - test_ml_api
+
 
   test_ml_api:
     <<: *defaults
@@ -57,60 +140,21 @@ jobs:
       - restore_cache:
           keys:
             - py-deps-{{ checksum "packages/ml_api/requirements.txt" }}
-      - aws-s3/copy:
-          arguments: '--recursive'
-          from: 's3://deployment-demo-bnc/classification-model-package/'
-          to: packages/classification_model/dist/
       - run:
           name: Runnning tests
           command: |
-            virtualenv venv
+            python3 -m venv venv
             . venv/bin/activate
             pip install --upgrade pip
             pip install -r packages/ml_api/requirements.txt
-            pip install -e packages/classification_model
-            py.test -vv packages/ml_api/tests
+            py.test -vv packages/ml_api/tests -m "not differential"
       - save_cache:
           key: py-deps-{{ checksum "packages/ml_api/requirements.txt" }}
           paths:
             - "/venv"
 
-  train_and_upload_classification_model:
-    <<: *defaults
-    steps:
-      - checkout
-      - *prepare_venv
-      - run:
-          name: Install requirements
-          command: |
-            virtualenv venv
-            . venv/bin/activate
-            pip install -r packages/classification_model/requirements.txt
-      - *fetch_data
-      - run:
-          name: Train model
-          command: |
-            . venv/bin/activate
-            PYTHONPATH=./packages/classification_model python3 packages/classification_model/classification_model/train_pipeline.py
-      - run:
-          name: Publish the model to s3
-          command: |
-            . venv/bin/activate
-            cd packages/classification_model
-            python3 setup.py sdist bdist_wheel
-      - aws-s3/copy:
-          arguments: '--recursive'
-          from: packages/classification_model/dist/
-          to: 's3://deployment-demo-bnc/classification-model-package/'
-
 workflows:
-  version: 2.1
+  version: 2
   test-all:
     jobs:
-      - test_classification_model
       - test_ml_api
-      - train_and_upload_classification_model:
-          requires:
-            - test_classification_model
-            - test_ml_api
-
