--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -149,8 +149,8 @@ jobs:
             . venv/bin/activate
             pip install --upgrade pip
             aws codeartifact login --tool pip --domain packages --repository classification-model-package
-            pip install -r packages/ml_api/requirements.txt
-            py.test -vv packages/ml_api/tests -m "not differential"
+#            pip install -r packages/ml_api/requirements.txt
+#            py.test -vv packages/ml_api/tests -m "not differential"
       - save_cache:
           key: py-deps-{{ checksum "packages/ml_api/requirements.txt" }}
           paths:
