--- a/packages/ml_api/requirements.txt
+++ b/packages/ml_api/requirements.txt
@@ -1,8 +1,10 @@
+# Install from S3
+classification-model==0.1.0
+
+-i=${PIP_INDEX_URL}
+
 # api
 flask==1.1.2
 
 # schema validation
 marshmallow==3.8.0
-
-# Install from S3
-classification-model==0.1.0
