--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -148,6 +148,7 @@ jobs:
             python3 -m venv venv
             . venv/bin/activate
             pip install --upgrade pip
+            pip install -r packages/classification_model/requirements.txt
             aws codeartifact login --tool pip --domain packages --repository classification-model-package
             pip install classification-model==0.1.0
 #            py.test -vv packages/ml_api/tests -m "not differential"
