--- a/packages/classification_model/requirements.txt
+++ b/packages/classification_model/requirements.txt
@@ -1,12 +1,14 @@
 # We use compatible release functionality (see PEP 440 here: https://www.python.org/dev/peps/pep-0440/#compatible-release)
 # to specify acceptable version ranges of our project dependencies. This gives us the flexibility to keep up with small
 # updates/fixes, whilst ensuring we don't install a major update which could introduce backwards incompatible changes.
+
+-i=${PIP_INDEX_URL}
+
 numpy==1.19.2
 pandas==1.1.3
 scikit-learn==0.23.2
 imblearn==0.0
 joblib==0.17.0
-imbalanced-learn==0.7.0
 
 # testing requirements
 pytest==6.1.1
