--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,6 +122,8 @@ workflows:
   version: 2.1
   test-all:
     jobs:
+      - test_classification_model
+      - test_ml_api
       - train_and_upload_classification_model:
           requires:
             - test_classification_model
