--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -122,7 +122,7 @@ jobs:
 
 workflows:
   version: 2.1
-#  test-all:
+  test-all:
     jobs:
       - test_classification_model
 #      - test_ml_api
