--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,11 +117,13 @@ jobs:
             pip install -i https://pypi.org/simple -r packages/ml_api/difftestrequirements.txt
             pip install -r packages/ml_api/difftestrequirementsaws.txt
             PYTHONPATH=./packages/ml_api python3 packages/ml_api/tests/capture_model_predictions.py
-      - run:
+          - run:
           name: Runnning differential tests
           command: |
             . venv/bin/activate
-            pip install -r packages/ml_api/requirements.txt
+            pip install -i https://pypi.org/simple -r packages/classification_model/requirements.txt
+            pip install -i https://pypi.org/simple -r packages/ml_api/requirements.txt
+            pip install -r packages/ml_api/requirementsaws.txt
             py.test -vv packages/ml_api/tests -m differential
 
 workflows:
