--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -123,10 +123,10 @@ jobs:
 #            py.test -vv packages/ml_api/tests -m differential
 
 workflows:
-#  version: 2.1
+  version: 2.1
 #  test-all:
-  jobs:
-    - test_classification_model
+    jobs:
+      - test_classification_model
 #      - test_ml_api
 #      - train_and_upload_classification_model:
 #          requires:
